@@ -78,3 +78,9 @@ class Char(FieldTranslate):
             database = Transaction().database
             value = database.unaccent(value)
         return value
+
+    def definition(self, model, language):
+        definition = super().definition(model, language)
+        definition['autocomplete'] = list(self.autocomplete)
+        definition['size'] = self.size
+        return definition
